Changes for 1.0.0:

 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)
 - [DEV-244] added Server name to frontend (Artem)
 - [DEV-245] added support of DB down message (Artem)
 - [DEV-246] ported filter for events screen (Artem)
 - [DEV-238] added support of sec|#num for function count() (Sasha)
 - [DEV-238] added support of text items for function count() (Sasha)
 - [DEV-232] added basic authentication for WEB scenarios on server side (Sasha)
 - [DEV-236] added support of net.tcp.dns.query item (Sasha)
 - [DEV-235] added support of tcp_perf item (Sasha)
 - [DEV-234] improved enhanced ICMP monitoring (Sasha)
 - [DEV-232] added basic authentication to WEB scenarios (Artem)
 - [DEV-230] changed ZABBIX notation to ZABICOM (Artem)

Changes for 1.4.j:

 - [ZBX-65] fixed bug with applications on items mass update (Artem)
 - added support of encoding parameter for regexp[] and iregexp[]. Integrated patch (Sasha)
 - improved support of macros {ITEM.VALUE} (Sasha)
 - do not generate unknown events (Alexei)
 - bulk acknowledge with empty comment (Sasha)
 - increased length of trigger description if Status of Triggers (Alexei)
 - Added script menu to host icons in Maps (Artem)
 - The last charactor in last value is unreadable
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-49] Support of encoding for monitoring of Windows event logs (Sasha)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - added new design of Status of Triggers (Artem)
 - added support of selection of events and bulk acknowledge of events (Artem)
 - added support of log files for {ITEM.LASTVALUE} (Alexei)
 - fixed acknowledgements synchronization (Sasha)
 - fixed appeared error in Latest Data (Artem)
 - fixed problem with equivalence in expressions in Trigger Log Form (Artem)